Bug 414599 - No namespace creation when importing stack traces
Summary: No namespace creation when importing stack traces
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: importer (other bugs)
Version First Reported In: 2.29.3 (KDE Applications 19.08.3)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-11-28 11:46 UTC by Ralf Habacker
Modified: 2019-12-02 23:59 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.29.90 (KDE Applications 19.11.90)
Sentry Crash Report:


Attachments
stacktrace to import (1.60 KB, text/plain)
2019-11-28 11:46 UTC, Ralf Habacker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2019-11-28 11:46:37 UTC
Created attachment 124152 [details]
stacktrace to import

SUMMARY


STEPS TO REPRODUCE
1. start umbrello
2. create new sequence diagram
3. open context menu on diagram background and import appended file

OBSERVED RESULT
The generated classes are not located in the namespace they should be. Instead the class name contains the namespace e.g. osgEarth::ElevationLayer::createHeightField

EXPECTED RESULT
The importer should generate correct namespaces and assign the imported classes to the related namespace


SOFTWARE/OS VERSIONS
Windows: 10
KDE Frameworks Version: 5.55
Qt Version: 5.9.7
Comment 1 Ralf Habacker 2019-11-28 14:56:55 UTC
Git commit b6de072c9074c083f7683ef610ad1730dda94af9 by Ralf Habacker.
Committed on 28/11/2019 at 14:46.
Pushed by habacker into branch 'release/19.12'.

Fix 'No namespace creation when importing stack traces'
FIXED-IN:2.30.0 (KDE Applications 19.12.0)

M  +42   -0    umbrello/codeimport/import_utils.cpp
M  +2    -0    umbrello/codeimport/import_utils.h
M  +2    -6    umbrello/diagram_utils.cpp

https://invent.kde.org/kde/umbrello/commit/b6de072c9074c083f7683ef610ad1730dda94af9