Fix 'No namespace creation when importing stack traces'

BUG:414599
FIXED-IN:2.30.0 (KDE Applications 19.12.0)