umbrello/codeimport/import_utils.h
@@ -53,6 +53,8 @@ namespace Import_Utils {
                                bool searchInParentPackageOnly = false,
                                bool remapParent = true);
 
+    UMLObject* createUMLObjectHierachy(UMLObject::ObjectType type, const QString &name, UMLPackage *parentPkg);
+
     void putAtGlobalScope(bool yesno);
 
     void setRelatedClassifier(UMLClassifier *c);
